@@ -1,0 +1,7 @@
+	.abicalls
+	.data
+	.gpword	foo
+	.8byte	bar - foo
+foo:
+	.word	0
+bar:
