@@ -1,3 +1,8 @@
+2004-10-07  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gas/mips/elf-rel21.[sd]: New test.
+	* gas/mips/mips.exp: Run it.
+
 2004-10-07  Jan Beulich  <jbeulich@novell.com>
 
 	* gas/cfi/cfi-common-4.[ds]: New.
